--- a/PullToRefresh/app/src/main/res/values/strings.xml
+++ b/PullToRefresh/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_act_grid">ActGrid</string>
+    <string name="title_activity_act_load_view">ActLoadView</string>
 </resources>
